--- a/style.html
+++ b/style.html
@@ -22,6 +22,20 @@
             </p>
         </main>
     </div>
+
+    <div class="content">
+        <div class="modal">
+            <div class="modalHeader">
+                <h3>Header</h3>
+            </div>
+            <div class="modalBody">
+                <h3>Body</h3>
+            </div>
+            <div class="modalFooter">
+                <h5>Footer</h5>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
