Modal using a simple css

--- a/style.html
+++ b/style.html
@@ -16,6 +16,7 @@
         </aside>
         <main>
             <h2>Main</h2>
+            <button type="button" class="button" id="openBtn">Open modal</button>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, maiores. Voluptate suscipit tempora
                 necessitatibus vel non itaque nesciunt quas iusto.
@@ -23,10 +24,11 @@
         </main>
     </div>
 
-    <div class="content">
+    <div class="content" id="content">
         <div class="modal">
             <div class="modalHeader">
                 <h3>Header</h3>
+                <button id="closeBtn" class="button red">Close</button>
             </div>
             <div class="modalBody">
                 <h3>Body</h3>
@@ -36,6 +38,7 @@
             </div>
         </div>
     </div>
+    <script src="./style.js"></script>
 </body>
 
 </html>
